# setuptools-betterproto

./: .cookiecutter-replay.json  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  latest-dev  mkdocs.yml  pyproject.toml  versions.json
.github/: RELEASE_NOTES.template.md  dependabot.yml  keylabeler.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yaml
latest-dev/reference/setuptools_betterproto/: index.html
src/setuptools_betterproto/: __init__.py  _command.py  _config.py  _install.py
tests/: test_command.py  test_config.py  test_setuptools_betterproto.py
v0.0-dev/: 404.html  index.html
v0.0-dev/CONTRIBUTING/: index.html
v0.0-dev/SUMMARY/: index.html
v0.0-dev/reference/SUMMARY/: index.html
v0.0-dev/reference/setuptools_betterproto/: index.html
v0.0-dev/search/: search_index.json
v0.1/: objects.inv
v0.1-dev/: 404.html  index.html  objects.inv
v0.1-dev/CONTRIBUTING/: index.html
v0.1-dev/SUMMARY/: index.html
v0.1-dev/_scripts/: macros.py
v0.1-dev/reference/SUMMARY/: index.html
v0.1-dev/reference/setuptools_betterproto/: index.html
v0.1-dev/search/: search_index.json
v0.1/_scripts/: macros.py
v0.2/: 404.html
v0.2-dev/: index.html  objects.inv
v0.2-dev/reference/setuptools_betterproto/: index.html
v0.2-dev/search/: search_index.json
v0.2/SUMMARY/: index.html
v0.2/reference/setuptools_betterproto/: index.html
v0.3/: 404.html
v0.3-dev/: index.html
v0.3-dev/reference/SUMMARY/: index.html
v0.3-dev/reference/setuptools_betterproto/: index.html
v0.3-dev/search/: search_index.json
v0.4-dev/: 404.html  index.html
v0.4-dev/CONTRIBUTING/: index.html
v0.4-dev/SUMMARY/: index.html
v0.4-dev/reference/SUMMARY/: index.html
v0.4-dev/reference/setuptools_betterproto/: index.html
