# License: MIT
# Copyright © 2024 Frequenz Energy-as-a-Service GmbH

[build-system]
requires = ["setuptools == 68.1.0", "setuptools_scm[toml] == 7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "setuptools-betterproto"
description = "A modern setuptools plugin to generate Python files from proto files using betterproto"
readme = "README.md"
license = { text = "MIT" }
keywords = [
  "betterproto",
  "code-generation",
  "frequenz",
  "lib",
  "library",
  "plugin",
  "proto",
  "protobuf",
  "protocol-buffers",
  "python",
  "setuptools",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Setuptools Plugin",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]
requires-python = ">= 3.10, < 4"
dependencies = [
  "betterproto[compiler] == 2.0.0b6",
  "grpcio-tools >= 1.59.0, < 2",
  "setuptools >= 67.6.0",
  "typing-extensions >= 4.5.0, < 5",
  "tomli >= 2.0.1, < 3; python_version < '3.11'",
]
dynamic = ["version"]

[[project.authors]]
name = "Frequenz Energy-as-a-Service GmbH"
email = "floss@frequenz.com"

[project.entry-points."setuptools.finalize_distribution_options"]
finalize_distribution_options_betterproto = "setuptools_betterproto:finalize_distribution_options"

[project.entry-points."distutils.commands"]
compile_betterproto = "setuptools_betterproto:CompileBetterproto"
add_proto_files = "setuptools_betterproto:AddProtoFiles"

[project.optional-dependencies]
dev-flake8 = [
  "flake8 == 7.0.0",
  "flake8-docstrings == 1.7.0",
  "flake8-pyproject == 1.2.3",  # For reading the flake8 config from pyproject.toml
  "pydoclint == 0.4.1",
  "pydocstyle == 6.3.0",
]
dev-formatting = ["black == 24.4.2", "isort == 5.13.2"]
dev-mkdocs = [
  "Markdown == 3.6.0",
  "black == 24.4.2",
  "mike == 2.1.1",
  "mkdocs-gen-files == 0.5.0",
  "mkdocs-literate-nav == 0.6.1",
  "mkdocs-macros-plugin == 1.0.5",
  "mkdocs-material == 9.5.25",
  "mkdocstrings[python] == 0.25.1",
  "mkdocstrings-python == 1.10.3",
  "frequenz-repo-config[lib] == 0.9.2",
]
dev-mypy = [
  "mypy == 1.10.0",
  "types-Markdown == 3.6.0.20240316",
  # This uses >= because these are types from production dependencies, not dev
  # dependencies, so we need to keep them in sync
  "types-setuptools >= 67.6.0.0",
  # For checking the noxfile, docs/ script, and tests
  "setuptools-betterproto[dev-mkdocs,dev-noxfile,dev-pytest]",
]
dev-noxfile = ["nox == 2024.4.15", "frequenz-repo-config[lib] == 0.9.2"]
dev-pylint = [
  # dev-pytest already defines a dependency to pylint because of the examples
  # For checking the noxfile, docs/ script, and tests
  "setuptools-betterproto[dev-mkdocs,dev-noxfile,dev-pytest]",
]
dev-pytest = [
  "pytest == 8.2.1",
  "pylint == 3.2.2",                                    # We need this to check for the examples
  "frequenz-repo-config[extra-lint-examples] == 0.9.2",
  "pytest-mock == 3.14.0",
  "pytest-asyncio == 0.23.7",
]
dev = [
  "setuptools-betterproto[dev-mkdocs,dev-flake8,dev-formatting,dev-mkdocs,dev-mypy,dev-noxfile,dev-pylint,dev-pytest]",
]

[project.urls]
Documentation = "https://frequenz-floss.github.io/setuptools-betterproto/"
Changelog = "https://github.com/frequenz-floss/setuptools-betterproto/releases"
Issues = "https://github.com/frequenz-floss/setuptools-betterproto/issues"
Repository = "https://github.com/frequenz-floss/setuptools-betterproto"
Support = "https://github.com/frequenz-floss/setuptools-betterproto/discussions/categories/support"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["benchmarks", "examples", "src", "tests"]

[tool.flake8]
# We give some flexibility to go over 88, there are cases like long URLs or
# code in documenation that have extra indentation. Black will still take care
# of making everything that can be 88 wide, 88 wide.
max-line-length = 100
extend-ignore = [
  "E203", # Whitespace before ':' (conflicts with black)
  "W503", # Line break before binary operator (conflicts with black)
]
# pydoclint options
style = "google"
check-return-types = false
check-yield-types = false
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
allow-init-docstring = true

[tool.pylint.similarities]
ignore-comments = ['yes']
ignore-docstrings = ['yes']
ignore-imports = ['no']
min-similarity-lines = 40

[tool.pylint.messages_control]
disable = [
  "too-few-public-methods",
  "too-many-return-statements",
  # disabled because it conflicts with isort
  "wrong-import-order",
  "ungrouped-imports",
  # pylint's unsubscriptable check is buggy and is not needed because
  # it is a type-check, for which we already have mypy.
  "unsubscriptable-object",
  # Checked by flake8
  "line-too-long",
  "redefined-outer-name",
  "unnecessary-lambda-assignment",
  "unused-import",
  "unused-variable",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
asyncio_mode = "auto"
required_plugins = ["pytest-asyncio", "pytest-mock"]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
# This option disables mypy cache, and it is sometimes useful to enable it if
# you are getting weird intermittent error, or error in the CI but not locally
# (or vice versa). In particular errors saying that type: ignore is not
# used but getting the original ignored error when removing the type: ignore.
# See for example: https://github.com/python/mypy/issues/2960
#no_incremental = true
packages = ["setuptools_betterproto"]
strict = true

[[tool.mypy.overrides]]
module = ["mkdocs_macros.*", "sybil", "sybil.*"]
ignore_missing_imports = true

[tool.setuptools_scm]
version_scheme = "post-release"
